apply plugin: 'com.android.application'
apply plugin: "kotlin-android"

android 
{

  buildFeatures 
  {
    buildConfig true // 确保这是设置为true
  }

  kotlinOptions 
  {
    jvmTarget = "1.8" // 或者适合你项目的其他版本
  }
    
  lint 
  {
    baseline = file("lint-baseline.xml")
  }

  compileOptions
  {
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
  }

  kotlinOptions 
  {
    jvmTarget = '1.8' // 或者 '11', '17' 等有效版本
  }
  
  compileSdkVersion 33
  namespace 'com.stupidbeauty.hxlauncher'

  signingConfigs {
    debug {
      storeFile file('debug.keystore')
      storePassword 'android'
      keyAlias 'androiddebugkey'
      keyPassword 'android'
    }
  }

  defaultConfig 
  {
    applicationId "com.stupidbeauty.hxlauncher"
//     buildToolsVersion = "30.0.3"
    minSdkVersion 21
    targetSdkVersion 33
    versionCode 15228
    versionName "15228.2024.10.29"
    multiDexEnabled true
    
//     generateBuildConfig = true
    
  } // defaultConfig 

  buildTypes 
  {
    release 
    {
      minifyEnabled false
      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
      multiDexKeepFile file('multidex-config.txt')
    }

    debug
    {
      signingConfig signingConfigs.debug
      minifyEnabled false
      shrinkResources false

      multiDexKeepFile file('multidex-config.txt')
      multiDexKeepProguard file('multidex-config.pro')
      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
    }
  }

  sourceSets
  {
    main 
    {
      jniLibs.srcDirs=['libs']

      java.srcDirs = [ 'src/main/java' ]
      kotlin.srcDirs = ['src/main/java', 'src/main/kotlin']
    }
  }

  return void
}

dependencies 
{
  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
  implementation 'com.jakewharton:butterknife:10.2.3'
  annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
  implementation fileTree(dir: 'libs', include: ['*.jar'])
  implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
  implementation 'com.mcxiaoke.volley:library:1.0.19'
  implementation 'com.github.hxcan:victoriafresh.android:2024.6.9'
  implementation 'com.github.hxcan:EXtremeZip-Android:2023.9.6'
  implementation 'com.upokecenter:cbor:4.4.4'
  implementation group: 'com.github.oxo42', name: 'stateless4j', version: '2.5.0'
  implementation 'com.rabbitmq:amqp-client:3.6.3'
  implementation group: 'io.gsonfire', name: 'gson-fire', version: '1.3.1'
  implementation 'com.github.bumptech.glide:glide:3.7.0'
  implementation 'com.github.hxcan:RippleEffect:2024.8.21'
  implementation 'com.github.hxcan:ShutDownAt2100Helper:2024.10.29'
  implementation fileTree(include: ['*.aar'], dir: 'libs')
  implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '1.6.0'
  implementation 'com.squareup.okhttp3:okhttp:4.9.2'
  implementation group: 'com.squareup.okhttp3', name: 'okhttp-tls', version: '4.9.1'
  implementation 'commons-io:commons-io:2.6'
  implementation 'com.google.protobuf:protobuf-java:3.11.4'
  implementation 'com.github.hxcan:existandroid:2022.7.34'
  implementation 'com.github.hxcan:TickSeekBar:2024.8.22'
  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
  implementation 'androidx.appcompat:appcompat:1.2.0'
  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
  implementation 'com.google.android.material:material:1.3.0-alpha04'
  implementation 'tech.gusavila92:java-android-websocket-client:1.2.2'
  implementation 'androidx.multidex:multidex:2.0.1'
  implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
  implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
  implementation("io.github.g00fy2:versioncompare:1.4.1")
  implementation 'com.github.hxcan:builtinftp:2023.7.6'
  implementation 'com.github.hxcan:voiceui:2024.6.6'
  implementation 'com.github.hxcan:rotatingactiveuser:2021.11.29'
  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
  implementation 'com.github.hxcan:CodePosition:2023.5.19'
  implementation group: 'com.koushikdutta.ion', name: 'ion', version: '3.1.0'
  implementation 'com.github.hxcan:upgrademanager:2024.8.25'
  implementation 'com.github.hxcan:appstore-core:2024.8.24'
  
  // 🆕 Android Crash Detector - Global exception handler with crash logging to external storage
  implementation 'com.github.hxcan:android-crash-detector:2026.4.8'
}

// # https://stackoverflow.com/questions/65380359/lomboks-access-to-jdk-compilers-internal-packages-incompatible-with-java-16

// # enable internal JDK API access at runtime
tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += 
    [
//         # essential for butterknife
        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',

//         # if you need Glide or LomBok
//         # these may not be the exact list, but it works for me
        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
    ] // options.forkOptions.jvmArgs += 
}
